[project]
name = "langgraph-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.3",
    "langgraph>=1.2.1",
    "notebook>=7.5.6",
    "python-dotenv>=1.2.2",
]
